testdata/zkc/invalid/felt_assignment_01.zkc
//error:8:23-33:field overflow
// ===================================================================
// 𝔽 assignment test
// ===================================================================

fn main() {
    // assignment from static table
    var felt_zero:𝔽 = 0x7f000001
}
